# cpp_minvulkan_headeronly

./: CMakeLists.txt  LICENSE  README.md  build.sh  vcpkg.json  vulkanapp1.sln
VulkanApplication1/: CMakeLists.txt  VulkanApplication1.cpp  VulkanApplication1.vcxproj  VulkanApplication1.vcxproj.filters
VulkanStaticLib1/: CMakeLists.txt  VulkanStaticLib1.vcxproj  VulkanStaticLib1.vcxproj.filters  framework.h
VulkanStaticLib1/include/: vulkanbuffers.hpp  vulkancommands.hpp  vulkancore.hpp  vulkandescriptors.hpp  vulkanpipeline.hpp  vulkanshaders.h  vulkantextures.hpp
VulkanStaticLib1/src/: VulkanStaticLib1.cpp  shader.frag  shader.vert  vulkanbuffers.cpp  vulkancommands.cpp  vulkancore.cpp  vulkandescriptors.cpp  vulkanpipeline.cpp  vulkantextures.cpp
build_clang/: CMakeCache.txt  Makefile  cmake_install.cmake
build_clang/vulkanapp1/: Makefile  cmake_install.cmake
vulkanapp1/: CMakeLists.txt  Header.h  shader.frag  vert.spv  vulkanapp1.cpp  vulkanapp1.vcxproj  vulkanapp1.vcxproj.filters
x64/Debug/: run.sh
